@@ -59,7 +59,7 @@ PLUGIN_SHAIRTUNES2_ENCODE
 	
 PLUGIN_SHAIRTUNES2_ENCODE_DESC
 	EN	Audio received from AirPlay devices are coded using ALAC, which cannot be streamed directly to LMS players.
-	EN	It can be re-encoded in wav, flac or mp3. With flac, the compression level can be adjusted from 0 to 9
+	EN	It can be re-encoded in wave, flac or mp3. With flac, the compression level can be adjusted from 0 to 9
 	EN	(default = 0, gives lowest compression, least CPU consumption). With mp3 the bitrate must bet set (default = 128)
 	
 PLUGIN_SHAIRTUNES2_FLACLEVEL
