@@ -5,6 +5,7 @@ note:
 
 0.101.2
  - wrong handling of 'wav/pcm' codec
+ - change 'flac' codec name to 'flc'
 
  0.101.1
  - WebUI codec name for flac was wrong ('flc' instead of 'flac')
